--- a/predixionai.ipynb
+++ b/predixionai.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +123,15 @@
     "        actions = self.extract_action_items(messages)\n",
     "        sentiment = self.analyze_sentiment(messages)\n",
     "        \n",
-    "        return AnalysisReport(summary=summary, key_actions=actions, sentiment_analysis=sentiment)\n",
-    "\n",
+    "        return AnalysisReport(summary=summary, key_actions=actions, sentiment_analysis=sentiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def format_report(report: AnalysisReport) -> str:\n",
     "    output = [\"## Summary\", report.summary, \"\"]\n",
     "    output.append(\"## Key Actions\")\n",
@@ -143,8 +150,15 @@
     "            f\"- Negative indicators: {neg}\",\n",
     "            f\"- Overall tone: {tone}\"\n",
     "        ])\n",
-    "    return \"\\n\".join(output)\n",
-    "\n",
+    "    return \"\\n\".join(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def analyze_conversation(conversation_text: str) -> str:\n",
     "    analyzer = HindiConversationAnalyzer()\n",
     "    report = analyzer.analyze(conversation_text)\n",
